# TRES

./: .gitignore  README.md
0-Snippets/: 1-HolaMundo.asm  2-CargaSector2.asm  3-CargaSector2EnOtraAddress.asm  4-CargaSector2EnOtraAddressYFuncionaEnMaquinaReal.asm  5-CargaEnPenYFloppy.asm  6-ModoGraficoTest.asm  7-IOenTeletipo.asm  8-SysInfoYFunciones.asm  9-LaFATv0.asm
Learning/0-Snippets/: 1-HolaMundo.asm  1-leemos de la rootentry, y esto nos da  10-ModoProtegido.asm  11-ModoProtegidoysaltoaC.asm  12-second_stage.asm  13-ModoProtegidoysaltoaCdeVerdad.asm  14-kernelPrueba.asm  1secGame.asm  2-CargaSector2.asm  2.5_CargarSector2MaquinaReal.asm  3-CargaSector2EnOtraAddress.asm  3.5_CargarSector2MaquinaRealconLBA.asm  3.9_cargarSectorNenMaquinaRealconLBA.asm  4-CargaSector2EnOtraAddressYFuncionaEnMaquinaReal.asm  5-CargaEnPenYFloppy.asm  6-ModoGraficoTest.asm  7-IOenTeletipo.asm  8-SysInfoYFunciones.asm  8-SysInfoYFunciones2.asm  9-KernelBasico  9-KernelBasico.asm  9-KernelBasico.hexdump  9-LaFAT.asm  9-LaFATv0.asm  9-LaFATv1.asm  9-LaFATv2.asm  9-LaFATv3.asm  9-LaFATv4_actual.asm  ahci_nada  algo  algo.cpp
Learning/1-Scripts/: b.sh  basura.txt  boch-confi  build.sh  create_d.sh  disco.img  jmp.c
Learning/2-FristCpp/: kernel1.cpp  kernel2.cpp  kernel_aun_no_va.cpp  linkerscript.ld  makefile
Learning/2-FristCpp/Ghidra.rep/: project.prp  projectState
Learning/2-FristCpp/Ghidra.rep/idata/: ~index.bak  ~journal.bak
Learning/2-FristCpp/Ghidra.rep/idata/00/: 00000005.prp  00000006.prp  00000007.prp
Learning/2-FristCpp/Ghidra.rep/idata/00/~00000005.db/: db.1.gbf
Learning/2-FristCpp/Ghidra.rep/idata/00/~00000006.db/: db.2.gbf  db.3.gbf
Learning/3-CCodes/: a.out  busca_discos_en_PCI.c  kernel_functions.cpp  kernel_main.cpp  lsPCI.c  pci.c
TRES/: CMakeLists.txt  Dockerfile.build  Dockerfile.environment  Readme.md  build.sh  build_docker.sh  toolchain_i686_.cmake
TRES/boot/: 0-BootStc.asm  1-SndStg.asm  CMakeLists.txt  build.sh
TRES/drivers/: CMakeLists.txt  console_driver.cpp  driver_base.h  driver_base.hpp  pci.cpp  pci.hpp  pci_constants.hpp  pci_deprecated.cpp  pci_deprecated.hpp  pci_headers.hpp
TRES/drivers/ahci/: FUERAakeLists.txt  ahci.cpp  ahci.hpp  constants.hpp  fis_headers.hpp  hba_headers.hpp  port.cpp  port.hpp  sata_port.hpp
TRES/kernel/: CMakeLists.txt  build.sh  generate_makefile.py  idt.hpp  kernel_functions.cpp  kernel_functions.h  kernel_functions.hpp  kernel_main.cpp  kernel_print_functions.cpp  linkerscript.ld  linkerscript_for_make.ld  makefile
TRES/lib/: CMakeLists.txt  basic_allocator.cpp  basic_allocator.hpp  basic_io.cpp  basic_io.h  basic_io.hpp  basic_string.cpp  basic_string.h  basic_string.hpp  basic_vector.h  basic_vector.hpp  memory.h  memory.hpp  types.h  types.hpp
TRES/tools/: create_d.sh  montaYdesmonta.sh  old_build.sh  setup.sh
(+2 files in other folders)
